@@ -29,10 +29,14 @@ Changelog
 3.0.3 (unreleased)
 ------------------
 
-- Fixed several small bugs related record-valued keyword cards (#70)
+- Fixed several small bugs involving corner cases in record-valued keyword
+  cards (#70)
 
 - In some cases HDU creation failed if the first keyword value in the header
   was not a string value (#89)
+
+- Fixed a crash when trying to compute the HDU checksum when the data array
+  contains an odd number of bytes (#91)
 
 - Fixed a typo in code for handling HCOMPRESS compressed images.
 
